# Timing-the-Message

./: .gitignore  README.md  analyze_trajectories.py  collect_data.py  danger_zone_reward_heatmap.py  evaluate_cooking.py  main.py  pyproject.toml  simplified_heuristic.py  visualize_trajectories.py
gymnasium_envs/: __init__.py  demo_envs.py
gymnasium_envs/envs/: __init__.py  highway.py  lunar_lander.py  test_env.py
slurm/: ppo.sh  train.sh
src/: __init__.py  train.py
src/agents/: __init__.py  base.py  eval.py  heuristic.py  humans.py  lstm.py  mlp.py  ppo.py  transformers.py  utils.py
src/configs/: args.py
src/feature_extractors/: highway_features.py  steakhouse_features.py
src/tests/: __init__.py  test_learning.py  test_transformers.py
src/utils/: evaluate.py  rollouts.py  training.py  util.py
