[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "gymnasium_envs"
version = "0.0.1"
dependencies = [
  "gymnasium",
  "swig",
  "gymnasium[box2d]",
  "box2d",
  "pygame==2.1.3",
  "pre-commit",
  "wandb",
  "torch",
  "torchvision",
  "tensorboard",
  "tyro",
  "numpy",
  "moviepy",
  "highway_env"
]